--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -44,15 +49,13 @@ dependencies {
 
 
     //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.github.bumptech.glide:glide:4.10.0' //Glide
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation "com.squareup.retrofit2:retrofit:2.9.0" //retrofit
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"//skalar konverter
 
+    //skalar konverter = JSON eredmenyt string kent adjuk vissza
+    //a konyvtarak egyutt mukodnek
+    implementation "com.squareup.okhttp3:logging-interceptor:3.12.0"
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
