--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,15 +50,22 @@ dependencies {
 
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0" //retrofit
-    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"//skalar konverter
 
     //skalar konverter = JSON eredmenyt string kent adjuk vissza
     //a konyvtarak egyutt mukodnek
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.0"
     implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
 
+    //moshi JSON objektum helzett KOTLIn objektumokat terit vissza
+    implementation "com.squareup.moshi:moshi:1.9.3"
+    implementation "com.squareup.moshi:moshi-kotlin:1.9.3"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.3.2"
+
+    //retrofit coroutine adapter dependency
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
 
 }
