--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,7 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:1.0.0-alpha03"
 
 
-    implementation "com.android.support:recyclerview-v7:30.0.0"
+   // implementation "com.android.support:recyclerview-v7:30.0.0"
 
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0" //retrofit
